; ModuleID = '/home/carl/AnghaBench/xhyve/src/extr_sockstream.c_stream_write.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/extr_sockstream.c_stream_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i64 0, align 8
@EINTR = common dso_local global i64 0, align 8
@EAGAIN = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @stream_write(i32 %0, i8* %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 0, i64* %9, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = bitcast i8* %11 to i32*
  store i32* %12, i32** %8, align 8
  br label %13

13:                                               ; preds = %43, %40, %3
  %14 = load i64, i64* %9, align 8
  %15 = load i64, i64* %7, align 8
  %16 = icmp slt i64 %14, %15
  br i1 %16, label %17, label %47

17:                                               ; preds = %13
  %18 = load i32, i32* %5, align 4
  %19 = load i32*, i32** %8, align 8
  %20 = load i64, i64* %9, align 8
  %21 = getelementptr inbounds i32, i32* %19, i64 %20
  %22 = load i64, i64* %7, align 8
  %23 = load i64, i64* %9, align 8
  %24 = sub nsw i64 %22, %23
  %25 = call i64 @write(i32 %18, i32* %21, i64 %24)
  store i64 %25, i64* %10, align 8
  %26 = load i64, i64* %10, align 8
  %27 = icmp eq i64 %26, 0
  br i1 %27, label %28, label %29

28:                                               ; preds = %17
  br label %47

29:                                               ; preds = %17
  %30 = load i64, i64* %10, align 8
  %31 = icmp slt i64 %30, 0
  br i1 %31, label %32, label %43

32:                                               ; preds = %29
  %33 = load i64, i64* @errno, align 8
  %34 = load i64, i64* @EINTR, align 8
  %35 = icmp eq i64 %33, %34
  br i1 %35, label %40, label %36

36:                                               ; preds = %32
  %37 = load i64, i64* @errno, align 8
  %38 = load i64, i64* @EAGAIN, align 8
  %39 = icmp eq i64 %37, %38
  br i1 %39, label %40, label %41

40:                                               ; preds = %36, %32
  br label %13

41:                                               ; preds = %36
  %42 = load i64, i64* %10, align 8
  store i64 %42, i64* %4, align 8
  br label %49

43:                                               ; preds = %29
  %44 = load i64, i64* %10, align 8
  %45 = load i64, i64* %9, align 8
  %46 = add nsw i64 %45, %44
  store i64 %46, i64* %9, align 8
  br label %13

47:                                               ; preds = %28, %13
  %48 = load i64, i64* %9, align 8
  store i64 %48, i64* %4, align 8
  br label %49

49:                                               ; preds = %47, %41
  %50 = load i64, i64* %4, align 8
  ret i64 %50
}

declare dso_local i64 @write(i32, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
